RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
==================================================

Version 0.2.6 [2013-02-14]:
- Add basic import support for Ciphergen XML files.

Version 0.2.5 [2013-02-07]:
- .make.unique: generates c("a1", "a2") instead of c("a", "a1");
  affected method: export,list.

Version 0.2.4 [2013-02-07]:
- Add basic support for mzML export.

Version 0.2.3 [2013-02-06]:
- Add missing "usage" section in export methods manual pages.

Version 0.2.2 [2013-01-27]:
- DESCRIPTION: Move base64enc, digest, readBrukerFlexData, readMzXmlData and
  XML to "Imports".

Version 0.2.1 [2013-01-26]:
- DESCRIPTION: Remove MALDIquant from the "Imports" field.

Version 0.2 [2013-01-14]:
- export: fix empty filenames.
- export,list: stop if directory doesn't exist.
- exportMsd: complete rewrite, write xml files manually instead of using the
  XML package (increasing speed).
- exportMsd: fix peaks argument.
- exportMsd tests: respect endianness.
- import: respect verbose argument in import(type=auto).

Version 0.1 [2012-12-10]:
- First public release.
- Supported file formats:
  - Import: tab, txt, csv, Bruker Daltonics *flex files, mzXML, mzML
  - Export: tab, csv, msd